# SQL-Reconciliation-Agent

./: .env.example  .gitignore  README.md  README_EN.md  deploy.sh  pyproject.toml  requirements.txt  setup.py  start.sh
.codeflicker/preview/: start-command.sh
apps/api/: auth.py  main.py
apps/cli/: demo.py
apps/ui/: docs.html  index.html  landing.html
articles/: viral-article-platforms.md  why-dataagent.md
data/: agents.sqlite  auth.sqlite  ctx_snapshots.sqlite  eval_data.sqlite  generate_enterprise_mock.py  generate_leetcode_db.py  generate_mock_data.py  generate_production_mock.py  leetcode_test.db  memory.sqlite  merge_unified_db.py  recon_v2.sqlite  schema_index.json  schema_index_enterprise.json  schema_index_production.json  sessions.sqlite  unified_test.db
deploy/: Dockerfile  docker-compose.yml
docs/: agent-implementation-notes.md  architecture.md  async-agent-guide.md  circuit-breaker-guide.md  context-engineering-guide.md  custom_tools_guide.md  devlog-guide.md  file_tools.md  function-calling-architecture.md  github-topics.md  intent-routing-design.md  logging-system-guide.md  observability-guide.md  reconciliation-agent-design.md  session-persistence-guide.md  skills-quickstart.md  skills-usage-guide.md  streaming-sse-guide.md  subagent-guide.md  todowrite-usage-guide.md  tool-response-protocol.md
docs/topics/: 01-architecture.md  02-permission.md  03-rag.md  04-memory.md  05-subagent.md  06-self-evolution.md  07-observability-eval.md
docs/v2/: architecture.md  runbook.md
examples/: async_agent_demo.py  circuit_breaker_demo.py  context_engineering_demo.py  devlog_demo.py  fastapi_sse_server.py  file_tools_demo.py  observability_demo.py  parallel_tools_demo.py  quick_demo_no_llm.py  reconciliation_demo.py  reconciliation_ui.py  self_evolving_recon_demo.py  session_persistence_demo.py  skills_demo.py  subagent_demo.py  todowrite_demo.py  todowrite_real_world.py  tool_response_demo.py
examples/custom_tools/: advanced_tool_template.py  code_formatter_tool.py  complete_example.py  expandable_tool_template.py  simple_tool_template.py  weather_tool.py
hello_agents/agents/: reconciliation_agent.py
hello_agents/core/: intent_router.py
knowledge_base/rules/: auto_relationships.md  business_terms.md  recon_thresholds.md
knowledge_base/table_docs/: lc_1068_产品销售分析I.md  (+23 more)
memory_store/: episodic.json  semantic.json
recon_cases/: 20260531_230621.json  20260531_230838.json  20260531_231106.json  20260531_231333.json  20260531_231903.json  20260531_232554.json  _index.json
recon_core/: __init__.py
recon_v2/: README.md  __init__.py
scripts/: eval_rag_recall.py  gen_relationship_chunks.py  ingest_prd.py  migrate_embeddings.py
skill_library/: _index.json
tests/: test_all_agents.py  test_async_lifecycle.py  test_circuit_breaker.py  test_clarify_multiturn.py  test_context_engineering.py  test_custom_tools.py  test_devlog_tool.py  test_diff_tool.py  test_file_tools.py  test_llm_function_calling.py  test_llm_streaming.py  test_observability.py  test_pydantic_v2_serialization.py  test_reconciliation_agent.py  test_session_persistence.py  test_skills.py  test_smart_summary.py  test_sql_tool.py  test_subagent_mechanism.py  test_todowrite.py  test_tool_filter.py  test_tool_response_protocol.py  test_trace_integration.py
(+121 files in other folders)
