[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-recon-agent"
version = "1.0.0"
description = "自然语言驱动的自动化 SQL 数据对账系统 — ReAct Agent · NL2SQL · 跨表差异比对"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ma Bohui"}
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "python-dotenv>=0.19.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "networkx>=2.6.0,<4.0.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]

[project.urls]
Homepage = "https://github.com/Marbacj/HelloAgents-SQL-Reconciliation-Agent"
Repository = "https://github.com/Marbacj/HelloAgents-SQL-Reconciliation-Agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["hello_agents*"]
exclude = ["tests*", "examples*", "docs*", "skills*"]

[tool.setuptools.package-data]
hello_agents = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
