[project]
name = "recon-v2"
version = "0.1.0"
description = "Industrial-grade NL2SQL reconciliation agent with LangGraph + Hybrid RAG + Self-Evolution"
authors = [
    { name = "mabohui", email = "mabohui@kuaishou.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM
    "litellm>=1.40.0",
    "tiktoken>=0.6.0",

    # Data & schema
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # SQL safety
    "sqlglot>=23.0",

    # RAG (optional, degraded gracefully)
    # "qdrant-client>=1.9",
    # "rank-bm25>=0.2.2",
    # "sentence-transformers>=3.0",
    # "FlagEmbedding>=1.2",

    # Observability (optional)
    # "opentelemetry-api>=1.25",
    # "opentelemetry-sdk>=1.25",
    # "opentelemetry-exporter-otlp>=1.25",
    # "openinference-instrumentation>=0.1",
    # "arize-phoenix>=4.0",

    # Web
    # "fastapi>=0.110",
    # "uvicorn>=0.27",
    # "httpx>=0.27",

    # Cache
    # "redis>=5.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
rag = [
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.2",
]
milvus = [
    "pymilvus>=2.4",
]
observability = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "openinference-instrumentation>=0.1",
    "arize-phoenix>=4.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]
all = [
    "recon-v2[rag,observability,web,test,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recon_v2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
